# phishgurd_windows

./: .gitignore  .pre-commit-config.yaml  README.md  install.py  main.py  pyproject.toml  requirements.txt  test_phishing.py
core/: browser_monitor.py  phishing_detector.py
database/: known_phishing.json  suspicious_domains.json  whitelist.json
gui/: alert_dialog.py  main_window.py
utils/: installer.py
